tests/snapshots/tui_theme_snapshots__ctxforge_snapshot.snap
---
source: tests/tui_theme_snapshots.rs
assertion_line: 38
expression: "render_with_theme(\"ctxforge\")"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    ctxforge │ scenario: (none) │ claude-sonnet-4 │ ~0 / 200000 (0.0%)                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ files (0) ───────────────────────────────────────────┐┌ bundle (2 items) ────────────────────────────────────────────────────────────────┐
│                                                      ││▶  1 ■ src/main.rs                       0   0.0%                                 │
│                                                      ││   2 ■ src/lib.rs                        0   0.0%                                 │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                                            
  > tree  |  j/k PgUp/PgDn  Enter expand  space add  E/C expand-all  |  / commands  Ctrl+F find  ? help  q quit
