tests/snapshots/tui_theme_snapshots__gruvbox_snapshot.snap
---
source: tests/tui_theme_snapshots.rs
assertion_line: 53
expression: "render_with_theme(\"gruvbox\")"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                              ctxforge │ claude-sonnet-4 │ ~0 / 200000 (0.0%)                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ files (0) ───────────────────────────────────────────┐┌ bundle (2 items) ────────────────────────────────────────────────────────────────┐
│                                                      ││▶  1 ■ src/main.rs                       0   0.0%                                 │
│                                                      ││   2 ■ src/lib.rs                        0   0.0%                                 │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                                            
  > tree  |  j/k PgUp/PgDn  Enter expand  space add  E/C expand-all  |  / commands  Ctrl+F find  ? help  q quit
