tests/snapshots/tui_theme_snapshots__tokyo_night_snapshot.snap
---
source: tests/tui_theme_snapshots.rs
assertion_line: 48
expression: "render_with_theme(\"tokyo-night\")"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    ctxforge │ scenario: (none) │ claude-sonnet-4 │ ~0 / 200000 (0.0%)                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ files (0) ───────────────────────────────────────────┐┌ prompt preview ──────────────────────────────────────────────────────────────────┐
│                                                      ││no scenario · /scenario to pick one                                               │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
└──────────────────────────────────────────────────────┘│                                                                                  │
┌ bundle (2) ──────────────────────────────────────────┐│                                                                                  │
│ 1 src/main.rs               0                        ││                                                                                  │
│ 2 src/lib.rs                0                        ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
┌ prompt · (no scenario) ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(press i to edit)                                                                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                                            
  > tree  |  j/k PgUp/PgDn  Enter expand  space add  E/C expand-all  |  / commands  Ctrl+F find  ? help  q quit
