tests/snapshots/tui_theme_snapshots__zinc_snapshot.snap
---
source: tests/tui_theme_snapshots.rs
assertion_line: 43
expression: "render_with_theme(\"zinc\")"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    ctxforge │ scenario: (none) │ claude-sonnet-4 │ ~0 / 200000 (0.0%)                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ files (0) ───────────────────────────────────────────┐┌ prompt preview ──────────────────────────────────────────────────────────────────┐
│                                                      ││no scenario · /scenario to pick one                                               │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
└──────────────────────────────────────────────────────┘│                                                                                  │
┌ bundle (2) ──────────────────────────────────────────┐│                                                                                  │
│ 1 src/main.rs               0                        ││                                                                                  │
│ 2 src/lib.rs                0                        ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
│                                                      ││                                                                                  │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                                            
  > tree  |  j/k PgUp/PgDn  Enter expand  space add  E/C expand-all  |  / commands  Ctrl+F find  ? help  q quit
